[tool.poetry]
name = "modulaciones digitales"
version = "0.1.0"
description = ""
authors = ["Alan Anastasio <aanastasio@inti.gob.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
matplotlib = "^3.9.0"
scipy = "^1.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
